--- a/join.html
+++ b/join.html
@@ -14,9 +14,9 @@
       <pre>SUS</pre>
       <nav>
         <ul>
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/join.html">Join</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./join.html">Join</a></li>
         </ul>
       </nav>
     </header>
