Add image and style

--- a/about.html
+++ b/about.html
@@ -22,7 +22,11 @@
     </header>
     <main>
       <section>
-        <div class="max-width">
+        <div class="max-width padding-top">
+          <h1>The Least Suspicious Group West of Canada</h1>
+          <div class="center-image">
+            <img src="./assets/harold-thumb.jpg" alt="" />
+          </div>
           <p>I have run out of stock photos</p>
         </div>
       </section>
