--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>©FireIsGood 2022</p>
+      <p>Contact me - <a>FireIsGood#0733</a></p>
+    </footer>
   </body>
 </html>
