--- a/join.html
+++ b/join.html
@@ -27,5 +27,9 @@
         </div>
       </section>
     </main>
+    <footer>
+      <p>©FireIsGood 2022</p>
+      <p>Contact me - <a>FireIsGood#0733</a></p>
+    </footer>
   </body>
 </html>
