--- a/join.html
+++ b/join.html
@@ -22,8 +22,11 @@
     </header>
     <main>
       <section>
-        <div class="max-width">
-          <p>You can't.</p>
+        <div class="max-width padding-top">
+          <h1>Join us</h1>
+          <ul>
+            <li>You can't</li>
+          </ul>
         </div>
       </section>
     </main>
