Add cards to about page

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>About SUS</title>
     <link rel="icon" href="./assets/favicon.png" />
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/card-fonts.css" />
   </head>
   <body>
     <header>
@@ -27,8 +28,97 @@
           <div class="center-image">
             <img src="./assets/harold-thumb.jpg" alt="" />
           </div>
-          <p>I have run out of stock photos</p>
+          <p>
+            I have run out of stock photos, but here are our business cards:
+          </p>
         </div>
+      </section>
+      <section class="card-list">
+        <article class="card">
+          <p class="phone">212.555.6342</p>
+          <p class="company">
+            <strong>PIERCE AND PIERCE</strong><br />
+            <span>MERGERS AND ACQUISITIONS</span>
+          </p>
+          <div class="center">
+            <p class="name">PATRICK BATEMAN</p>
+            <p class="title">Vice President</p>
+          </div>
+          <div class="bottom">
+            <p>
+              <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+            </p>
+            <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
+          </div>
+        </article>
+        <article class="card">
+          <p class="phone">212.555.6342</p>
+          <p class="company">
+            <strong>PIERCE AND PIERCE</strong><br />
+            <span>MERGERS AND ACQUISITIONS</span>
+          </p>
+          <div class="center">
+            <p class="name">DAVID VAN PATTEN</p>
+            <p class="title">Vice President</p>
+          </div>
+          <div class="bottom">
+            <p>
+              <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+            </p>
+            <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
+          </div>
+        </article>
+        <article class="card">
+          <p class="phone">212.555.6342</p>
+          <p class="company">
+            <strong>PIERCE AND PIERCE</strong><br />
+            <span>MERGERS AND ACQUISITIONS</span>
+          </p>
+          <div class="center">
+            <p class="name">TIMOTHY BRYCE</p>
+            <p class="title">Vice President</p>
+          </div>
+          <div class="bottom">
+            <p>
+              <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+            </p>
+            <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
+          </div>
+        </article>
+        <article class="card">
+          <p class="phone">212.555.6342</p>
+          <p class="company">
+            <strong>PIERCE AND PIERCE</strong><br />
+            <span>MERGERS AND ACQUISITIONS</span>
+          </p>
+          <div class="center">
+            <p class="name">KIRA YOSHIKAGE</p>
+            <p class="title">Vice President</p>
+          </div>
+          <div class="bottom">
+            <p>
+              <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+            </p>
+            <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
+          </div>
+        </article>
+        <article class="card">
+          <p class="phone">212.555.6342</p>
+          <p class="company">
+            <strong>PIERCE AND PIERCE</strong><br />
+            <span>MERGERS AND ACQUISITIONS</span>
+          </p>
+          <div class="center">
+            <p class="name">PAUL ALLEN</p>
+            <p class="title">Vice President</p>
+          </div>
+          <div class="bottom">
+            <p>
+              <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+            </p>
+            <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
+          </div>
+        </article>
       </section>
     </main>
     <footer>
