--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </article>
       </section>
       <section>
-        <div class="max-width cards">
+        <div class="max-width news-cards">
           <article>
             <div class="article-image">
               <img src="./assets/harold-glasses.jpg" alt="" />
