Add card mobile support

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="./assets/favicon.png" />
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/card-fonts.css" />
+    <script defer src="./scripts/cards.js"></script>
   </head>
   <body>
     <header>
@@ -33,92 +34,94 @@
           </p>
         </div>
       </section>
-      <section class="card-list">
-        <article class="card">
-          <p class="phone">212.555.6342</p>
-          <p class="company">
-            <strong>PIERCE AND PIERCE</strong><br />
-            <span>MERGERS AND ACQUISITIONS</span>
-          </p>
-          <div class="center">
-            <p class="name">PATRICK BATEMAN</p>
-            <p class="title">Vice President</p>
-          </div>
-          <div class="bottom">
-            <p>
-              <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+      <section class="card-container">
+        <div class="card-list">
+          <article class="card">
+            <p class="phone">212.555.6342</p>
+            <p class="company">
+              <strong>PIERCE AND PIERCE</strong><br />
+              <span>MERGERS AND ACQUISITIONS</span>
             </p>
-            <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
-          </div>
-        </article>
-        <article class="card">
-          <p class="phone">212.555.6342</p>
-          <p class="company">
-            <strong>PIERCE AND PIERCE</strong><br />
-            <span>MERGERS AND ACQUISITIONS</span>
-          </p>
-          <div class="center">
-            <p class="name">DAVID VAN PATTEN</p>
-            <p class="title">Vice President</p>
-          </div>
-          <div class="bottom">
-            <p>
-              <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+            <div class="center">
+              <p class="name">PATRICK BATEMAN</p>
+              <p class="title">Vice President</p>
+            </div>
+            <div class="bottom">
+              <p>
+                <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+              </p>
+              <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
+            </div>
+          </article>
+          <article class="card">
+            <p class="phone">212.555.6342</p>
+            <p class="company">
+              <strong>PIERCE AND PIERCE</strong><br />
+              <span>MERGERS AND ACQUISITIONS</span>
             </p>
-            <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
-          </div>
-        </article>
-        <article class="card">
-          <p class="phone">212.555.6342</p>
-          <p class="company">
-            <strong>PIERCE AND PIERCE</strong><br />
-            <span>MERGERS AND ACQUISITIONS</span>
-          </p>
-          <div class="center">
-            <p class="name">TIMOTHY BRYCE</p>
-            <p class="title">Vice President</p>
-          </div>
-          <div class="bottom">
-            <p>
-              <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+            <div class="center">
+              <p class="name">DAVID VAN PATTEN</p>
+              <p class="title">Vice President</p>
+            </div>
+            <div class="bottom">
+              <p>
+                <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+              </p>
+              <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
+            </div>
+          </article>
+          <article class="card">
+            <p class="phone">212.555.6342</p>
+            <p class="company">
+              <strong>PIERCE AND PIERCE</strong><br />
+              <span>MERGERS AND ACQUISITIONS</span>
             </p>
-            <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
-          </div>
-        </article>
-        <article class="card">
-          <p class="phone">212.555.6342</p>
-          <p class="company">
-            <strong>PIERCE AND PIERCE</strong><br />
-            <span>MERGERS AND ACQUISITIONS</span>
-          </p>
-          <div class="center">
-            <p class="name">KIRA YOSHIKAGE</p>
-            <p class="title">Vice President</p>
-          </div>
-          <div class="bottom">
-            <p>
-              <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+            <div class="center">
+              <p class="name">TIMOTHY BRYCE</p>
+              <p class="title">Vice President</p>
+            </div>
+            <div class="bottom">
+              <p>
+                <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+              </p>
+              <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
+            </div>
+          </article>
+          <article class="card">
+            <p class="phone">212.555.6342</p>
+            <p class="company">
+              <strong>PIERCE AND PIERCE</strong><br />
+              <span>MERGERS AND ACQUISITIONS</span>
             </p>
-            <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
-          </div>
-        </article>
-        <article class="card">
-          <p class="phone">212.555.6342</p>
-          <p class="company">
-            <strong>PIERCE AND PIERCE</strong><br />
-            <span>MERGERS AND ACQUISITIONS</span>
-          </p>
-          <div class="center">
-            <p class="name">PAUL ALLEN</p>
-            <p class="title">Vice President</p>
-          </div>
-          <div class="bottom">
-            <p>
-              <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+            <div class="center">
+              <p class="name">KIRA YOSHIKAGE</p>
+              <p class="title">Vice President</p>
+            </div>
+            <div class="bottom">
+              <p>
+                <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+              </p>
+              <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
+            </div>
+          </article>
+          <article class="card">
+            <p class="phone">212.555.6342</p>
+            <p class="company">
+              <strong>PIERCE AND PIERCE</strong><br />
+              <span>MERGERS AND ACQUISITIONS</span>
             </p>
-            <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
-          </div>
-        </article>
+            <div class="center">
+              <p class="name">PAUL ALLEN</p>
+              <p class="title">Vice President</p>
+            </div>
+            <div class="bottom">
+              <p>
+                <span>358</span> EXCHANGE PLACE NEW YORK N.Y. <span>10006</span>
+              </p>
+              <p>FAX <span>358</span> TELEX <span>10 4534</span></p>
+            </div>
+          </article>
+        </div>
       </section>
     </main>
     <footer>
