Update About page

--- a/about.html
+++ b/about.html
@@ -30,6 +30,62 @@
             <img src="./assets/harold-thumb.jpg" alt="" />
           </div>
           <p>
+            We have the most person of all time and every single one of them is
+            the most absolute person that has ever existed in the history of the
+            human race. With not only the technology, but also the manufacturing
+            might that exists, the objective that we have set will be
+            accomplished at a high speed with extreme precision the likes of
+            which have
+            <span class="fake-link">nearly never been observed</span> at any
+            time in the past.
+          </p>
+          <p>
+            We strive to do the most that most would not do. In fact, we have
+            done not only the absolute most action that has been done, but we
+            have also done it in a way that has been done and will continue to
+            be done with for the forseeable future and perhaps beyond.
+          </p>
+          <hr />
+          <h1>Our Phonic Link to the Group</h1>
+          <div class="center-image">
+            <img src="./assets/hamburger-deities.jpg" alt="" />
+          </div>
+          <p>
+            For many years, we have attempted to uncover the root of the history
+            behind <span class="fake-link">the original</span>, however with
+            recent breakthroughs, we have achieved what was thought of as
+            economically, socially, and ecologically never achieved to complete
+            our action.
+          </p>
+          <p>
+            With not only the talent and skill of ours, but the funding and
+            backing, we are able to reach new heights in our journey and
+            accomplish any and all goals we have ever considered in the past,
+            present, or future. Not only has more than a small percentage of our
+            associated allies become, but no more than a greater percentage were
+            not previously! In other words, the greatest was and therefore only
+            <span class="fake-link">a future lies in wait.</span>
+          </p>
+          <hr />
+          <h1>Fighting for the goal</h1>
+          <div class="center-image">
+            <img src="./assets/epic-battle.jpg" alt="" />
+          </div>
+          <p>
+            In our fight to complete the objective, we have made many sacrifices
+            for the greater goal, however we stand unshaken by the powers that
+            be and their interactions with
+            <span class="fake-link">the greater unknown</span>. For more
+            information, dial 9 99 9999 999999 99999999 at your local
+            <span class="glitch">amogus</span> dealership.
+          </p>
+          <hr />
+          <h1>We host parties at the times</h1>
+          <div class="center-image">
+            <img src="./assets/old-people.jpg" alt="" />
+          </div>
+          <p>Party!</p>
+          <p>
             I have run out of stock photos, but here are our business cards:
           </p>
         </div>
@@ -126,7 +182,7 @@
     </main>
     <footer>
       <p>©FireIsGood 2022</p>
-      <p>Contact me - <a>FireIsGood#0733</a></p>
+      <p>Contact me - <span class="fake-link">FireIsGood#0733</span></p>
     </footer>
   </body>
 </html>
