Update footer link

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </main>
     <footer>
       <p>©FireIsGood 2022</p>
-      <p>Contact me - <a>FireIsGood#0733</a></p>
+      <p>Contact me - <span class="fake-link">FireIsGood#0733</span></p>
     </footer>
   </body>
 </html>
