Update footer link and add image

--- a/join.html
+++ b/join.html
@@ -24,6 +24,9 @@
       <section>
         <div class="max-width padding-top">
           <h1>Join us</h1>
+          <div class="center-image">
+            <img src="./assets/fish-hand.jpg" alt="" />
+          </div>
           <ul>
             <li>You can't</li>
           </ul>
@@ -32,7 +35,7 @@
     </main>
     <footer>
       <p>©FireIsGood 2022</p>
-      <p>Contact me - <a>FireIsGood#0733</a></p>
+      <p>Contact me - <span class="fake-link">FireIsGood#0733</span></p>
     </footer>
   </body>
 </html>
