Add mobile support to main page cards

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SUS</title>
     <link rel="icon" href="./assets/favicon.png" />
     <link rel="stylesheet" href="./styles/index.css" />
+    <script defer src="./scripts/news-select.js"></script>
   </head>
   <body>
     <header>
@@ -30,14 +31,14 @@
       <section class="max-width">
         <h1>Join the SUSsiest frat around</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
-          sapiente voluptate fugiat voluptates deserunt veritatis esse nam,
-          corrupti reiciendis accusamus earum nostrum. Similique ad fugit
-          deserunt provident illo nisi temporibus, sapiente molestiae aliquam
-          laboriosam quisquam eos tempora culpa. Vero aspernatur nemo illum
-          error pariatur natus saepe excepturi? Error, iste modi.
+          Over many years we have grown strong and numerous. Forsaken by the
+          forsakers the groups involved have toiled in trials upon which
+          suffering has occurred. Not with blood, but with air can we breathe,
+          although many have thought that the other may have been the case at
+          some point. In any how case time, there is a need to talk about the
+          benefits provided by the group.
         </p>
-        <p>Look at all these testimonies!</p>
+        <h3>Look at all these testimonies!</h3>
         <ul>
           <li>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
@@ -64,13 +65,13 @@
         <article>
           <div class="cut-in-text left padding-top">
             <h2>Massive Community (REAL)</h2>
-            <p>Look at all these people! And now for some more sponsership</p>
+            <p>Look at all these people! And now for some more sponsorship</p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-              voluptatum asperiores, qui nemo architecto voluptatibus laboriosam
-              rem iste ex pariatur aut possimus consequuntur, porro, corrupti
-              culpa! Illum aliquam aspernatur dignissimos excepturi. Amet facere
-              iusto accusantium cum perspiciatis! Facere, aperiam amet?
+              Welcome to my mine, play that note block nicely, however what if
+              you were tired and were unable to, perhaps, play the metaphorical
+              note block in a nice way? With All Stat, you too can revitalize
+              your previous and achieve a future.
+              <span class="fake-link">BUY NOW!</span>
             </p>
           </div>
           <div class="cut-in-image right">
@@ -85,16 +86,19 @@
             <h2>It's very real!!</h2>
             <p>Ignore the watermark, that's just a camera issue</p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
-              illo, pariatur at eaque quod aut totam commodi rerum. Velit
-              dolorum doloremque placeat iusto quia necessitatibus.
+              Did you know that one in three are actually real? Perhaps in the
+              case of the first, there was no second, however with the inclusion
+              of a third, there is definitely a second! Many may not have
+              considered this in due time, however it appears to be true for all
+              cases relating to the final.
             </p>
           </div>
         </article>
       </section>
       <section>
+        <h1>Important Information</h1>
         <div class="max-width news-cards">
-          <article>
+          <article class="story">
             <div class="article-image">
               <img src="./assets/harold-glasses.jpg" alt="" />
             </div>
@@ -103,7 +107,7 @@
               <p>Really smartly</p>
             </div>
           </article>
-          <article>
+          <article class="story">
             <div class="article-image">
               <img src="./assets/coffee.jpg" alt="" />
             </div>
@@ -112,7 +116,7 @@
               <p>Or be SUSsed</p>
             </div>
           </article>
-          <article>
+          <article class="story">
             <div class="article-image">
               <img src="./assets/point-up.jpg" alt="" />
             </div>
