--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/card-fonts.css" />
     <script defer src="./scripts/cards.js"></script>
+    <script defer src="./scripts/glitch-text.js"></script>
   </head>
   <body>
     <header>
