--- a/index.html
+++ b/index.html
@@ -118,6 +118,27 @@
           </article>
           <article class="story">
             <div class="article-image">
+              <img src="./assets/epic-battle.jpg" alt="" />
+            </div>
+            <div class="article-text">
+              <h1>Internal Strife</h1>
+              <p>Pvp battle</p>
+            </div>
+          </article>
+          <article class="story">
+            <div class="article-image">
+              <img src="./assets/harold-sticker.png" alt="" />
+            </div>
+            <div class="article-text">
+              <h1>The man</h1>
+              <p>
+                Our patron, the man has been real for all of history and will
+                not accept failure.
+              </p>
+            </div>
+          </article>
+          <article class="story">
+            <div class="article-image">
               <img src="./assets/point-up.jpg" alt="" />
             </div>
             <div class="article-text">
