Add eye track amongus and glitch text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="./assets/favicon.png" />
     <link rel="stylesheet" href="./styles/index.css" />
     <script defer src="./scripts/news-select.js"></script>
+    <script defer src="./scripts/glitch-text.js"></script>
+    <script defer src="./scripts/follow-mouse.js"></script>
   </head>
   <body>
     <header>
@@ -27,6 +29,13 @@
           <h1>Sigma Upsilon Sigma</h1>
           <p>Amalgamating Many Original Groups, Uplifting Society</p>
         </div>
+        <div id="guy">
+          <img src="./assets/among-us.png" alt="" />
+          <div class="eyes">
+            <img class="eye" src="./assets/eye.png" alt="" />
+            <img class="eye" src="./assets/eye.png" alt="" />
+          </div>
+        </div>
       </div>
       <section class="max-width">
         <h1>Join the SUSsiest frat around</h1>
@@ -38,9 +47,11 @@
           some point. In any how case time, there is a need to talk about the
           benefits provided by the group.
         </p>
-        <h3>Look at all these testimonies!</h3>
+        <h3>
+          Look at all these <span class="glitch">heck</span>ing testimonies!
+        </h3>
         <ul>
-          <li>
+          <li class="glitch-wave">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
             iure consectetur est nobis doloremque voluptatibus.
           </li>
