--- a/index.html
+++ b/index.html
@@ -51,24 +51,36 @@
           Look at all these <span class="glitch">heck</span>ing testimonies!
         </h3>
         <ul>
-          <li class="glitch-wave">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
-            iure consectetur est nobis doloremque voluptatibus.
+          <li>
+            <span class="glitch-wave" style="--length: 1s; --offset: 0.5s">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Temporibus iure consectetur est nobis doloremque voluptatibus.
+            </span>
           </li>
           <li>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            voluptatum nisi maiores? Modi, esse deserunt nulla a enim provident
-            optio!
+            <span class="glitch-wave" style="--length: 3s; --offset: 1s">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+              voluptatum nisi maiores? Modi, esse deserunt nulla a enim
+              provident optio!
+            </span>
           </li>
           <li>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea id sint
-            iure.
+            <span class="glitch-wave" style="--length: 2s; --offset: 0.2s">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea id
+              sint iure.
+            </span>
           </li>
-          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. A.</li>
           <li>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo,
-            dignissimos autem repudiandae quae quod cumque reiciendis rem natus
-            velit molestias?
+            <span class="glitch-wave" style="--length: 2s; --offset: 1.2s"
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit. A.
+            </span>
+          </li>
+          <li>
+            <span class="glitch-wave" style="--length: 2s; --offset: 1s">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo,
+              dignissimos autem repudiandae quae quod cumque reiciendis rem
+              natus velit molestias?
+            </span>
           </li>
         </ul>
       </section>
