Add slide in effect to cards

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script defer src="./scripts/news-select.js"></script>
     <script defer src="./scripts/glitch-text.js"></script>
     <script defer src="./scripts/follow-mouse.js"></script>
+    <script defer src="./scripts/cut-in-slide.js"></script>
   </head>
   <body>
     <header>
@@ -101,6 +102,7 @@
             <img src="./assets/point-camera.jpg" alt="" />
           </div>
         </article>
+        <br />
         <article>
           <div class="cut-in-image left">
             <img src="./assets/angry.jpg" alt="" />
@@ -115,6 +117,22 @@
               considered this in due time, however it appears to be true for all
               cases relating to the final.
             </p>
+          </div>
+        </article>
+        <br />
+        <article>
+          <div class="cut-in-text left padding-top">
+            <h2>I spent way too much time animating this</h2>
+            <p>It's true! I've been writing this for like 1.5 hours</p>
+            <p>
+              I hope you appreciate how much work this takes... Otherwise I
+              would be sad! And that would be less than optimal for this
+              website's continued existence. <br />
+              <span class="fake-link">SORRY?</span>
+            </p>
+          </div>
+          <div class="cut-in-image right">
+            <img src="./assets/point-camera.jpg" alt="" />
           </div>
         </article>
       </section>
