Add cards and bg

--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
           </div>
         </article>
       </section>
-      <section>
+      <section class="news-cards">
         <h1>Important Information</h1>
-        <div class="max-width news-cards">
+        <div class="max-width news-cards-inner">
           <article class="story">
             <div class="article-image">
               <img src="./assets/harold-glasses.jpg" alt="" />
