Add Banana and various changes

--- a/join.html
+++ b/join.html
@@ -32,6 +32,9 @@
           </ul>
         </div>
       </section>
+      <div class="center-image banana">
+        <img src="./assets/banana.gif" alt="" />
+      </div>
     </main>
     <footer>
       <p>©FireIsGood 2022</p>
