--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <p>Amalgamating Many Original Groups, Uplifting Society</p>
         </div>
         <div id="guy">
-          <img src="./assets/among-us.png" alt="" />
+          <img src="./assets/among-us.png" alt="Orange astronaut" />
           <div class="eyes">
             <img class="eye" src="./assets/eye.png" alt="" />
             <img class="eye" src="./assets/eye.png" alt="" />
@@ -141,7 +141,7 @@
         <div class="max-width news-cards-inner">
           <article class="story">
             <div class="article-image">
-              <img src="./assets/harold-glasses.jpg" alt="" />
+              <img src="./assets/harold-glasses.jpg" alt="Old guy with glasses" />
             </div>
             <div class="article-text">
               <h1>Think Smartly</h1>
@@ -150,7 +150,7 @@
           </article>
           <article class="story">
             <div class="article-image">
-              <img src="./assets/coffee.jpg" alt="" />
+              <img src="./assets/coffee.jpg" alt="People drinking coffee outside" />
             </div>
             <div class="article-text">
               <h1>Drink</h1>
@@ -159,7 +159,7 @@
           </article>
           <article class="story">
             <div class="article-image">
-              <img src="./assets/epic-battle.jpg" alt="" />
+              <img src="./assets/epic-battle.jpg" alt="A person chokes a second person" />
             </div>
             <div class="article-text">
               <h1>Internal Strife</h1>
@@ -168,7 +168,7 @@
           </article>
           <article class="story">
             <div class="article-image">
-              <img src="./assets/harold-sticker.png" alt="" />
+              <img src="./assets/harold-sticker.png" alt="Old man's head" />
             </div>
             <div class="article-text">
               <h1>The man</h1>
@@ -180,7 +180,7 @@
           </article>
           <article class="story">
             <div class="article-image">
-              <img src="./assets/point-up.jpg" alt="" />
+              <img src="./assets/point-up.jpg" alt="People pointing up" />
             </div>
             <div class="article-text">
               <h1>These articles are SUS</h1>
