--- a/about.html
+++ b/about.html
@@ -30,7 +30,10 @@
           <article>
             <h1>The Least Suspicious Group West of Canada</h1>
             <div class="center-image">
-              <img src="./assets/harold-thumb.jpg" alt="" />
+              <img
+                src="./assets/harold-thumb.jpg"
+                alt="Old man giving thumbs up"
+              />
             </div>
             <p>
               We have the most person of all time and every single one of them
@@ -53,7 +56,10 @@
           <article>
             <h1>Our Phonic Link to the Group</h1>
             <div class="center-image">
-              <img src="./assets/hamburger-deities.jpg" alt="" />
+              <img
+                src="./assets/hamburger-deities.jpg"
+                alt="Hamburgers float around a woman"
+              />
             </div>
             <p>
               For many years, we have attempted to uncover the root of the
@@ -77,7 +83,10 @@
           <article>
             <h1>Fighting for the goal</h1>
             <div class="center-image">
-              <img src="./assets/epic-battle.jpg" alt="" />
+              <img
+                src="./assets/epic-battle.jpg"
+                alt="A person chokes a second person"
+              />
             </div>
             <p>
               In our fight to complete the objective, we have made many
@@ -92,7 +101,7 @@
           <article>
             <h1>We host parties at the times</h1>
             <div class="center-image">
-              <img src="./assets/old-people.jpg" alt="" />
+              <img src="./assets/old-people.jpg" alt="Old people partying" />
             </div>
             <p>Party!</p>
           </article>
